ic-canister/ic-canister-macros/tests/export_candid/not_expended/no_return_type.stderr
error: `#[export_candid]` function must return `String`
 --> tests/export_candid/not_expended/no_return_type.rs:4:1
  |
4 | fn did() {}
  | ^^
